[gd_scene load_steps=22 format=3 uid="uid://dmo51rmnyy3h4"]

[ext_resource type="Script" path="res://player/player.gd" id="1_h50mc"]
[ext_resource type="Texture2D" uid="uid://dn5ff63j6e6db" path="res://world/textures/idle.png" id="2_m68wf"]
[ext_resource type="Texture2D" uid="uid://87qwdxgksbxt" path="res://world/textures/1.png" id="3_54suc"]
[ext_resource type="Texture2D" uid="uid://piqeir80d3vp" path="res://world/resource_textures/rock.png" id="3_ho0c7"]
[ext_resource type="PackedScene" uid="uid://bylo2vk0wiiit" path="res://guns/pistol/pistol.tscn" id="3_seoce"]
[ext_resource type="Texture2D" uid="uid://dyytda6rwsoap" path="res://world/textures/2.png" id="4_c17oy"]
[ext_resource type="Texture2D" uid="uid://bpue84jhpisrj" path="res://world/resource_textures/Iron.png" id="4_snjl6"]
[ext_resource type="Texture2D" uid="uid://cupxf335juoa2" path="res://world/textures/3.png" id="5_rw311"]
[ext_resource type="Texture2D" uid="uid://dqyrcc7jikina" path="res://world/textures/4.png" id="6_xrcqa"]
[ext_resource type="Texture2D" uid="uid://gjgy2dagt0jn" path="res://world/textures/5.png" id="7_5qo2a"]
[ext_resource type="Texture2D" uid="uid://dwlcwk1ll1mlc" path="res://world/textures/6.png" id="8_n232e"]
[ext_resource type="Texture2D" uid="uid://cy26hb23hkxeu" path="res://world/textures/7.png" id="9_n3fch"]
[ext_resource type="Texture2D" uid="uid://dc5mr0xq4hbgk" path="res://world/resource_textures/Wood.png" id="11_6t3po"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_82rtl"]
radius = 6.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmh16"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aa4a0"]
size = Vector2(1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_411af"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m68wf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_54suc")
}, {
"duration": 1.0,
"texture": ExtResource("4_c17oy")
}, {
"duration": 1.0,
"texture": ExtResource("5_rw311")
}, {
"duration": 1.0,
"texture": ExtResource("6_xrcqa")
}, {
"duration": 1.0,
"texture": ExtResource("7_5qo2a")
}, {
"duration": 1.0,
"texture": ExtResource("8_n232e")
}, {
"duration": 1.0,
"texture": ExtResource("9_n3fch")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="GDScript" id="GDScript_btydo"]
script/source = "extends Marker2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	look_at(get_global_mouse_position())
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_gfgd2"]
radius = 5.09902

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vq7xs"]
bg_color = Color(0.976471, 0, 0, 0.67451)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijc83"]
bg_color = Color(0, 0.690196, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Player" type="CharacterBody2D"]
platform_floor_layers = 4294967040
platform_wall_layers = 17
script = ExtResource("1_h50mc")
NORMAL_SPEED = 100.0

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_82rtl")
debug_color = Color(0.905882, 0.270588, 0.341176, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_kmh16")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="WaterDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterDetection"]
shape = SubResource("RectangleShape2D_aa4a0")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
texture_filter = 1
position = Vector2(9.53674e-07, 6.55651e-07)
scale = Vector2(0.941176, 0.693878)
sprite_frames = SubResource("SpriteFrames_411af")
animation = &"walk"
autoplay = "default"

[node name="Pistol" parent="." instance=ExtResource("3_seoce")]
unique_name_in_owner = true
z_index = 1
texture_filter = 1
scale = Vector2(0.5, 0.5)

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="blockDetection" type="Marker2D" parent="."]
script = SubResource("GDScript_btydo")

[node name="Area2D" type="Area2D" parent="blockDetection"]
position = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="blockDetection/Area2D"]
unique_name_in_owner = true
position = Vector2(42, 0)
shape = SubResource("CircleShape2D_gfgd2")

[node name="BlockDetectionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="DodgeInterval" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[node name="DodgeCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="FtpTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="resource_gui" type="CanvasLayer" parent="."]

[node name="wood_texture" type="TextureRect" parent="resource_gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -118.0
offset_right = -58.0
offset_bottom = -84.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("11_6t3po")

[node name="wood_amount" type="Label" parent="resource_gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -111.0
offset_right = -2.0
offset_bottom = -88.0
grow_horizontal = 0
grow_vertical = 0
text = "0"

[node name="stone_texture" type="TextureRect" parent="resource_gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -78.0
offset_right = -58.0
offset_bottom = -44.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_ho0c7")

[node name="stone_amount" type="Label" parent="resource_gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -73.0
offset_right = -2.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
text = "0"

[node name="iron_texture" type="TextureRect" parent="resource_gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -38.0
offset_right = -58.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_snjl6")

[node name="iron_amount" type="Label" parent="resource_gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -33.0
offset_right = -2.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "0"

[node name="HEALTH" type="Panel" parent="resource_gui"]
z_index = 1
offset_left = 19.0
offset_top = 580.0
offset_right = 936.0
offset_bottom = 628.0
scale = Vector2(0.439292, 1.00304)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ProgressBar" type="ProgressBar" parent="resource_gui/HEALTH"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00981461
anchor_top = 0.0833333
anchor_right = 0.990185
anchor_bottom = 0.916667
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_vq7xs")
theme_override_styles/fill = SubResource("StyleBoxFlat_ijc83")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="WaterDetection" to="." method="_on_water_detection_body_entered"]
[connection signal="body_exited" from="WaterDetection" to="." method="_on_water_detection_body_exited"]
[connection signal="timeout" from="BlockDetectionTimer" to="." method="_on_block_detection_timer_timeout"]
[connection signal="timeout" from="DodgeInterval" to="." method="_on_dodge_interval_timeout"]
[connection signal="timeout" from="FtpTimer" to="." method="_on_ftp_timer_timeout"]
